--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Dec 02 21:16:39 CET 2019
-sdk.dir=C\:\\Users\\nacho\\AppData\\Local\\Android\\Sdk
+#Thu Dec 05 08:31:58 CET 2019
+sdk.dir=/Users/dam/Library/Android/sdk
